# workflow_diffusion

./: .gitignore  IRMOF-1.cif  IRMOF-1_CO2.res  IRMOF-1_CO2.volpo  IRMOF-1_H2O.res  IRMOF-1_H2O.volpo  IRMOF-1_N2.res  IRMOF-1_N2.volpo  IRMOF-1_mace_relaxed.cif  LAMOF-1.cif  LAMOF-1_CO2.res  LAMOF-1_CO2.volpo  LAMOF-1_H2O.res  LAMOF-1_H2O.volpo  LAMOF-1_N2.res  LAMOF-1_N2.volpo  README.md  dft_relax.py  example_mof_generation.py  gcmc_wrapper.py  get_output.ipynb  job_flow_test.ipynb  mof_discovery_flow.py  pixi.toml  pyproject.toml  raspa_simulations.py  requirements.txt  run_jobs.ipynb  run_jobs.py  simulation.input  simulation.py  workflow.ipynb  zeopp.py  zeopp_final_CO2.res  zeopp_final_CO2.volpo  zeopp_final_H2O.res  zeopp_final_H2O.volpo  zeopp_final_N2.res  zeopp_final_N2.volpo  zeopp_mace_wf.py
agents/: README.md  __init__.py  base.py  mof_master.py
agents/agent_2_linkergen/: Example_Linker_Formula.txt  Example_Linker_SMILES.txt  README.md  example_usage.py  linkergen_agent.py
agents/agent_4_qforge/: README.md  __init__.py  example_usage.py  mof_discovery.py  mof_modeller.py  zeopp_analyzer.py
dft_analysis/: get_e_form.ipynb  parse_workflow_steps.ipynb
diffuse_materials/: README.md  cif_to_tfrecord.py  dataset.py  train.py  vae.py
